[gd_scene load_steps=40 format=3 uid="uid://1u3ctmco8f3e"]

[ext_resource type="Script" path="res://enemy/Completed Mobs/single cell octo/octo_shotgunner.gd" id="1_sggy2"]
[ext_resource type="Texture2D" uid="uid://0mks3u08sirw" path="res://enemy/Monsters_Creatures_Fantasy/Single Celled Ranger/octo_charge.png" id="2_jcnej"]
[ext_resource type="Texture2D" uid="uid://bcx4mc87b6qsw" path="res://enemy/Monsters_Creatures_Fantasy/Single Celled Ranger/octo_attack.png" id="2_u03gm"]
[ext_resource type="Texture2D" uid="uid://b486rxtoeoa72" path="res://enemy/Monsters_Creatures_Fantasy/Single Celled Ranger/octo move.png" id="3_iyv3q"]
[ext_resource type="Texture2D" uid="uid://buk0gtmomaocc" path="res://enemy/Monsters_Creatures_Fantasy/Single Celled Ranger/octo die.png" id="4_gp1kr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t05ig"]
atlas = ExtResource("2_u03gm")
region = Rect2(0, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_3binn"]
atlas = ExtResource("2_u03gm")
region = Rect2(50, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccksi"]
atlas = ExtResource("2_u03gm")
region = Rect2(100, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_q165d"]
atlas = ExtResource("2_u03gm")
region = Rect2(150, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4n2r"]
atlas = ExtResource("2_u03gm")
region = Rect2(200, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_adceu"]
atlas = ExtResource("2_u03gm")
region = Rect2(250, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uund"]
atlas = ExtResource("2_u03gm")
region = Rect2(300, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbvv3"]
atlas = ExtResource("2_jcnej")
region = Rect2(0, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_31uj2"]
atlas = ExtResource("2_jcnej")
region = Rect2(50, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybuw1"]
atlas = ExtResource("2_jcnej")
region = Rect2(100, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_aywmj"]
atlas = ExtResource("2_jcnej")
region = Rect2(150, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_idncx"]
atlas = ExtResource("2_jcnej")
region = Rect2(200, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0xox"]
atlas = ExtResource("2_jcnej")
region = Rect2(250, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_rej4b"]
atlas = ExtResource("2_jcnej")
region = Rect2(300, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j7al"]
atlas = ExtResource("2_jcnej")
region = Rect2(350, 0, 50, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_26xh5"]
atlas = ExtResource("4_gp1kr")
region = Rect2(0, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0100"]
atlas = ExtResource("4_gp1kr")
region = Rect2(40, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxn0k"]
atlas = ExtResource("4_gp1kr")
region = Rect2(80, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_1obnm"]
atlas = ExtResource("4_gp1kr")
region = Rect2(120, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wf4d"]
atlas = ExtResource("4_gp1kr")
region = Rect2(160, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pnpb"]
atlas = ExtResource("4_gp1kr")
region = Rect2(200, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0h5b"]
atlas = ExtResource("4_gp1kr")
region = Rect2(240, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qe16"]
atlas = ExtResource("4_gp1kr")
region = Rect2(280, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cgmn"]
atlas = ExtResource("4_gp1kr")
region = Rect2(320, 0, 40, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnawr"]
atlas = ExtResource("3_iyv3q")
region = Rect2(0, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlqea"]
atlas = ExtResource("3_iyv3q")
region = Rect2(80, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_mj0kf"]
atlas = ExtResource("3_iyv3q")
region = Rect2(160, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_ertdg"]
atlas = ExtResource("3_iyv3q")
region = Rect2(240, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpo0b"]
atlas = ExtResource("3_iyv3q")
region = Rect2(320, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_kagxt"]
atlas = ExtResource("3_iyv3q")
region = Rect2(400, 0, 80, 78)

[sub_resource type="AtlasTexture" id="AtlasTexture_nfawt"]
atlas = ExtResource("3_iyv3q")
region = Rect2(480, 0, 80, 78)

[sub_resource type="SpriteFrames" id="SpriteFrames_15wv0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t05ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3binn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccksi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q165d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4n2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adceu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uund")
}],
"loop": false,
"name": &"attack",
"speed": 28.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbvv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31uj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybuw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aywmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idncx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0xox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rej4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j7al")
}],
"loop": false,
"name": &"charge",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26xh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0100")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxn0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1obnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wf4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pnpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0h5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qe16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cgmn")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnawr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlqea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mj0kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ertdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpo0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kagxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nfawt")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_s1yga"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_lja1n"]
radius = 8.25

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_sggy2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -1)
sprite_frames = SubResource("SpriteFrames_15wv0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_s1yga")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_lja1n")
debug_color = Color(1, 0.0055771, 0.059515, 0.42)

[node name="Marker2D1" type="Marker2D" parent="."]
position = Vector2(19, -11)

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(25, -6)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(25, 6)

[node name="Marker2D4" type="Marker2D" parent="."]
position = Vector2(19, 11)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
